[package]
name = "graphql-orm-backup"
version = "0.4.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Dastari/graphql-orm-backup"
description = "Backup and restore orchestration primitives for graphql-orm applications"

[features]
default = ["local"]
local = ["graphql-orm-storage/local"]
smb = ["dep:secrecy", "graphql-orm-storage/smb"]
# Requires the host application to enable exactly one graphql-orm backend
# feature (sqlite or postgres).
orm = ["dep:graphql-orm"]

[dependencies]
async-trait = "0.1"
bytes = "1"
futures = "0.3"
graphql-orm = { git = "https://github.com/Dastari/graphql-orm.git", rev = "510cd85d9fbc9ae60c7117a752370c590564949e", version = "0.6.1", optional = true, default-features = false }
graphql-orm-storage = { git = "https://github.com/Dastari/graphql-orm-storage.git", rev = "f1a1f06483d5fd3a0b8fd17f013b3ad4dd9849c5", version = "0.5.0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", optional = true }
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }

[[test]]
name = "local_repository_round_trip"
path = "tests/local_repository_round_trip.rs"
required-features = ["local"]

[[test]]
name = "incremental_backup"
path = "tests/incremental_backup.rs"
required-features = ["local"]

[[test]]
name = "operational_safety"
path = "tests/operational_safety.rs"
required-features = ["local"]

[[test]]
name = "restore_snapshot"
path = "tests/restore_snapshot.rs"
required-features = ["local"]

[[test]]
name = "smb_repository"
path = "tests/smb_repository.rs"
required-features = ["smb"]
